<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/bookingicon"
            android:title="@string/booking"/>
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notificationicon"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_userProfile"
            android:icon="@drawable/userprofile"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>

</menu>
